# so101_hx35hm

./: .gitignore  HX35HM_单臂集成使用说明.md  HX35HM_机械臂装配建议.md  HX35HM_舵机替换与集成方案.md  HX35HM_集成实现修改日志.md  README.md  aruco_handeye_range055.json  aruco_handeye_range075_z010.json  aruco_handeye_range085_z010.json  aruco_handeye_result.json  aruco_handeye_result_v2.json  aruco_handeye_samples.json  aruco_handeye_samples_auto.json  aruco_handeye_samples_auto_v2.json  colcon_defaults.yaml  continuous_sweep.py  handeye_samples_visual.json  return_to_home.py  ros_robot_controller_设备命名与串口稳定性修改说明.md  标定完整流程.md
calibration/handeye/: aruco_handeye_result.json  aruco_handeye_samples.json  aruco_handeye_samples_v2.json
docs/: HX35HM_SO101_IK改FJT统一执行说明.md  HX35HM_SO101_MoveIt规划控制启动流程.md  HX35HM_SO101_RGBD外参调试指南.md  HX35HM_SO101_环境清理与进程管理.md  HX35HM_SO101_相机内参标定完整步骤.md  HX35HM_SO101_红球抓取完整执行步骤.md  HX35HM_SO101_红球抓取调试日志.md  HX35HM_SO101_装配姿态与归零建议.md  HX35HM_SO101_超详细装配流程.md  标定完整流程.md
src/: HX35HM_SO101_MoveIt规划控制启动流程.md  HX35HM_SO101_手动调参指南.md  HX35HM_SO101_控制链接口速查表.md  HX35HM_SO101_机械臂控制链详解.md  HX35HM_SO101_红球抓取完整执行步骤.md  HX35HM_SO101_红球抓取调试日志.md  ORBBEC_ASTRA_PRO_PLUS_ROS2_架构与接入方案.md  README.md  SO101_HX35HM_DEBUG_LOG.md  SO101_HX35HM_TECHNICAL_REPORT.md  SO101_HX35HM_WORKFLOW.md
src/ros_robot_controller-ros2/src/ros_robot_controller/ros_robot_controller/: change_servo_id.py  ros_robot_controller_node.py  ros_robot_controller_sdk.py
src/so101-ros-physical-ai/: USAGE_zh.md
src/so101-ros-physical-ai/episode_recorder/: CMakeLists.txt
src/so101-ros-physical-ai/rosbag_to_lerobot/: .flake8
src/so101-ros-physical-ai/rosbag_to_lerobot/test/: test_flake8.py
src/so101-ros-physical-ai/so101_bringup/: package.xml
src/so101-ros-physical-ai/so101_bringup/config/cameras/: cam_overhead_calib.yaml  cam_overhead_calib_placeholder_720.yaml  so101_cameras_astra_overhead_rgbd_720.yaml  so101_cameras_overhead_rgb.yaml  so101_cameras_overhead_rgb_720.yaml  so101_gs_cam_astra_overhead.yaml  so101_gs_cam_astra_overhead_320.yaml  so101_gs_cam_astra_overhead_720.yaml  so101_openni2.yaml  so101_openni2_320.yaml
src/so101-ros-physical-ai/so101_bringup/launch/: camera_tf_moveit.launch.py  follower_hx35hm_moveit.launch.py
src/so101-ros-physical-ai/so101_bringup/rviz/: vision_overhead_debug.rviz
src/so101-ros-physical-ai/so101_bringup/scripts/: so101_depth_rgb_tuner.py
src/so101-ros-physical-ai/so101_grasping/: CMakeLists.txt  package.xml
src/so101-ros-physical-ai/so101_grasping/launch/: so101_visual_grasp.launch.py
src/so101-ros-physical-ai/so101_grasping/src/: so101_visual_grasp.cpp
src/so101-ros-physical-ai/so101_inference/so101_inference/: async_client.py  lerobot_inference_node.py
src/so101-ros-physical-ai/so101_inference/so101_inference/transport/: __init__.py  base.py  grpc_transport.py  zmq_transport.py
src/so101-ros-physical-ai/so101_kinematics/: setup.py
src/so101-ros-physical-ai/so101_kinematics/so101_kinematics/: cartesian_motion_node.py  motion_planner.py
src/so101-ros-physical-ai/so101_moveit_octomap_updater/: CMakeLists.txt  package.xml  so101_octomap_updater_plugins.xml
src/so101-ros-physical-ai/so101_moveit_octomap_updater/include/so101_moveit_octomap_updater/: pointcloud_octomap_updater.hpp
src/so101-ros-physical-ai/so101_moveit_octomap_updater/src/: pointcloud_octomap_updater.cpp
src/so101-ros-physical-ai/so101_openni2_camera/: CMakeLists.txt  package.xml
src/so101-ros-physical-ai/so101_openni2_camera/src/: openni2_camera_node.cpp
src/so101-ros-physical-ai/tools/handeye/: auto_motion_aruco_sampler.py  collect_aruco_handeye_samples.py  solve_aruco_handeye.py
src/so101_hx35hm_bridge/: setup.py
src/so101_hx35hm_bridge/so101_hx35hm_bridge/: aruco_detector_node.py  bridge_node.py  red_circle_detector_node.py  table_plane_estimator_node.py
